fix padding when using dark mode extension

--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -75,10 +75,11 @@ body {
     margin-right: auto;
     padding-left: 6.25%;
     padding-right: 12.25%;
+    padding-top: 1%;
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     background-color: var(--mainBg);
     color: var(--fontColor);
-    max-width: 1400px;
+    max-width: 1600px;
     counter-reset: sidenote-counter;
 }
 
